test/parsing/errors/multipleExternalRenaming.compopts
--detailed-errors # multipleExternalRenaming-detailed.good
--no-detailed-errors # multipleExternalRenaming-brief.good
